<resources>
    <string name="app_name">ItuTptParis</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_deconnexion">Déconnexion</string>

    <string name="menu_accueil">Accueil</string>
    <string name="menu_paris_list">Liste des paris</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_map">Agence</string>
    <string name="menu_qrcde">Scanne QRCode</string>

    <string name="nom_utilisateur">Nom de l\'utilisateur</string>
    <string name="prenom_utilisateur">Prénom(s) de l\'utilisateur</string>
    <string name="user_name">Nom d\'utilisateur</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom(s)</string>
    <string name="mpd_resaise">Confirmation mot de passe</string>
    <string name="email">Adresse email</string>
    <string name="numero_telephone">Numéro télephone</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="mpd">Mot de passe</string>
    <string name="recherche">Recherche...</string>

    <string name="erreur_connexion">Une erreur c\'est produite, veuillez reéssayer ulterieurement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipe_gagnante">Equipe gagnante: </string>
    <string name="cote_selectionne">Cote: </string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="somme_a_miser">Somme à miser</string>
    <string name="mise_obligatoire">Il faut que vous miser un somme !</string>
    <string name="erreur_mise_pari">Erreur !</string>

    //scanne qrcode
    <string name="scanne_qr_code">Scanne QrCode</string>
    <string name="scanne_qr_code_arreter">Scanne QrCode arreté</string>
    <string name="no_match">Pas de match disponible.</string>
    <string name="veuillez_scanner_un_qrcode">Vueillez scanner votre CRCode</string>
    <string name="solde_insuffisant">Votre solde est insuffisant !</string>
    <string name="pari_cree">Pari créé !</string>
    <string name="error_mouvement_creation">Mouvement du joueur n\'est pas enregistré !</string>

    // list par fragment
    <string name="pas_paris">Vous n\'avez pas encore parier.</string>

    // inscription activity
    <string name="password_pas_identique">Les mots de passe ne sont pas identiques!</string>
    <string name="email_erreur">L\'adresse email est incorrect!</string>
    <string name="user_name_exists">Le nom d\'utilisateur (login) est déjà utilisé!</string>
    <string name="user_created">Vous étes inscrit!</string>
</resources>