<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_accueil" />

        <item
            android:id="@+id/nav_find_agence"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_scane_qrcode"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/menu_qrcde" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/menu_profil" />

    </group>
</menu>