<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mg.itu.lazanomentsoa.itutptparis.views.fragments.AccueilFragment"
        android:label="@string/menu_accueil"
        tools:layout="@layout/fragment_accueil" />

    <fragment
        android:id="@+id/nav_paris_list"
        android:name="mg.itu.lazanomentsoa.itutptparis.views.fragments.ParisListFragment"
        android:label="@string/menu_paris_list"
        tools:layout="@layout/fragment_paris_list" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mg.itu.lazanomentsoa.itutptparis.views.fragments.ProfilFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_profil" />


    <fragment
        android:id="@+id/nav_scane_qrcode"
        android:name="mg.itu.lazanomentsoa.itutptparis.views.fragments.QrcodeFragment"
        android:label="@string/menu_qrcde"
        tools:layout="@layout/fragment_qrcode" />


    <fragment
        android:id="@+id/nav_find_agence"
        android:name="mg.itu.lazanomentsoa.itutptparis.views.fragments.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />


</navigation>